[project]
name = "configflow"
version = "0.1.0"
description = "A Python library for event-driven configuration management"
readme = "docs/source/README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "watchdog>=2.0",
    "PyYAML>=6.0",
    "orjson>=3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
]

[project.urls]
Homepage = "https://github.com/your-username/configflow"
Repository = "https://github.com/your-username/configflow.git"
Issues = "https://github.com/your-username/configflow/issues"
Documentation = "https://configflow.readthedocs.io/"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"